deploy/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service

spec:
  selector:
    app: deploy-auth
  ports:
  - targetPort: 3001
    port: 3001

  type: NodePort
