deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: deploy-frontend
  ports:
  - targetPort: 80
    port: 80

  type: NodePort
